<resources>
    <string name="app_name">Tascura</string>
    <string name="enter_new_task">Enter new task</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="enter_name_of_new_list">Enter name of new list</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="logging_in">Logging In…</string>
    <string name="log_in_here">Already have an account? Log in here!</string>
    <string name="register_here">Don\'t have an account? Register here!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="to_reset_your_password">To reset your password, please provide the email address registered to the account</string>
    <string name="register">Register</string>
    <string name="registering">Registering…</string>
    <string name="send_new_password">Send Mail</string>
    <string name="sending">Sending…</string>
    <string name="change_list_name">Change list name</string>
    <string name="add_subtask">Add subtask</string>
    <string name="add_information">Add information</string>
    <string name="new_list_name">New list name</string>

    <string name="default_list_name">My List</string>

    <string name="menu_add_list">Add List</string>
    <string name="menu_rename_list">Rename List</string>
    <string name="menu_delete_list">Delete List</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_delete_account">Delete Account</string>

    <string name="toast_no_list_chosen">No list chosen</string>
    <string name="toast_cannot_delete_default_list">You cannot delete default list</string>
    <string name="toast_user_registered_successfully">User registered successfully</string>
    <string name="toast_email_sent_successfully">Success! Check your email to change your password</string>
    <string name="toast_something_went_wrong">Something went wrong, please try again</string>
    <string name="toast_user_account_deleted">User account deleted</string>
    <string name="toast_password_is_invalid">The password is invalid</string>

    <string name="dialog_delete_title">Delete this list?</string>
    <string name="dialog_delete_message">All tasks in this list will be deleted</string>
    <string name="dialog_delete_account_title">Delete this account?</string>
    <string name="dialog_delete_account_message">Once deleted, this account and all data will be gone forever. Delete?</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_delete_negative_button">Cancel</string>

    <string name="dialog_edit_title">Edit Task</string>
    <string name="dialog_edit_message">Edit the name of your task</string>
    <string name="dialog_edit_positive_button">OK</string>
    <string name="dialog_edit_negative_button">Cancel</string>

    <string name="error_no_text_entered">You did not enter any text</string>
    <string name="error_list_already_exists">This list already exists</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="splash_screen">Splash screen</string>
    <string name="logo">Logo</string>
</resources>
