<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:paddingHorizontal="24dp">

    <View
        android:id="@+id/arrowBackView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_arrow_back_24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:layout_marginTop="96dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_reset_your_password"
        android:textColor="@color/colorHintGray"
        android:textSize="16sp"
        android:layout_marginVertical="12dp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/colorHintGray"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/send_new_password"/>

</LinearLayout>